[tool.poetry]
name = "chatgpt_client"
version = "0.1.0"
description = ""
authors = ["Maniak Root <maniakroot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
